--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.3
 asgiref==3.2.7
+beautifulsoup4==4.9.1
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -8,7 +9,8 @@ contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
 Django==3.0.5
-django-filters==0.2.1
+django-bootstrap4==1.1.1
+django-filter==2.3.0
 django-tables2==2.3.1
 djangorestframework==3.11.0
 html5lib==1.0.1
@@ -28,6 +30,7 @@ pytz==2019.3
 requests==2.22.0
 retrying==1.3.3
 six==1.14.0
+soupsieve==2.0.1
 sqlparse==0.3.1
 urllib3==1.25.8
 webencodings==0.5.1
